--- a/ex2/index.html
+++ b/ex2/index.html
@@ -127,7 +127,7 @@
                                         </div>
 
                                         <!-- >>>>>ไอคอนรูปตะกร้า <<<<<<,s----------------------------------------->
-                                        <div class="icon is-size-4" @click="cart.push(product)">
+                                        <div class="icon is-size-4" @click="addToCart(product)">
                                             <i class="fas fa-shopping-cart has-text-warning"></i>
                                         </div>
 
@@ -169,7 +169,7 @@
                                     </div>
                                     <div>
                                         <!-- icon รูปถังขยะ------------------------------------------- -->
-                                        <span class="icon mr-2" key="false">
+                                        <span class="icon mr-2" key="false" @click="removeFromCart(index)">
                                             <i class="far fa-trash-alt"></i>
                                         </span>
                                     </div>
@@ -180,12 +180,11 @@
                 </div>
                 <div style="display: flex;justify-content: space-between;font-size: 1.25rem;">
                     <span class="has-text-weight-bold">Total</span>
-                    <span id="totalPrice">123</span>
+                    <span id="totalPrice">{{totalPrice}}</span>
                 </div>
 
                 <!-- ปุ่ม Checkout ------------------------------------------------------------ -->
-                <a class="button is-warning mt-3" style="width: 100%;">Checkout</a>
-
+                <a class="button is-warning mt-3" style="width: 100%;" @click="goCheckout()">Checkout</a>   
             </div>
         </div>
     </div>
@@ -271,9 +270,51 @@
                     },
                 ],
                 cart: [],
-                show_modal: false
+                show_modal: false,
+                checked : false 
             },
-        })
+            methods:{
+                addToCart(product){
+        if((this.cart.find(item => item.id === product.id))){
+
+          this.cart = this.cart.map(item => {
+            if(item.id === product.id) {
+              item.quantity++
+            }
+
+            return item;
+          })
+          return;
+        }
+        this.cart.push({ ...product, quantity: 1});
+        },
+        removeFromCart(index){
+            this.cart.splice(index, 1);
+            this.checked = true;
+        
+      },
+        goCheckout(){
+        localStorage.setItem('cart', JSON.stringify(this.cart))
+        window.location.replace('./checkout.html')
+      }
+    },
+    computed: {
+      totalPrice(){
+        return this.cart.reduce((acc, curr) => acc + (curr.price * curr.quantity), 0)
+      },
+      cart(){
+        this.cart = JSON.parse(localStorage.getItem('cart'));
+      }
+    },
+    watch: {
+      totalPrice(current,previous){
+        console.log(current, previous)
+      },
+      // cart(){
+      //   this.cart = JSON.parse(localStorage.getItem('cart'))
+      // },
+    }
+})
     </script>
 
 
